# ps2-map-analyzer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  census.http  eslint.config.js  http-client.env.json  jest.config.cjs  jest.config.js  main.py  map_tools.py  package-lock.json  package.json  pyproject.toml  requirements.txt  ruff.toml  test_main.http  tsconfig.json  tsconfig.test.json  vite.config.ts
backend/: main.py  map_tools.py
backend/analysis/: territory.py
backend/services/: common.py
backend/services/honu/: client.py
docs/: ai-handoff-consolidated.md  analysis-style-separation.md  architecture-decisions.md  domain-knowledge.md  vue-based-state-management.md
frontend/: continent_map.js  indar-map-info-combined.json  indar-map_state.json  index.html  status-vue.js  status.html
frontend/public/: amerish-map-census.json  amerish-map_state.json  amerish-zone.json  esamir-map-census.json  esamir-map_state.json  esamir-zone.json  hossin-map-census.json  hossin-map_state.json  indar-map-census.json  indar-map-info-combined.json  oshur-map-census.json  oshur-zone.json
frontend/src/: config.json  hexagons.ts  main.ts  status.ts
frontend/tests/: RegionAnalyzer.test.ts  RegionOwnershipAnalyzer.test.ts  graph.test.ts  hexagons.test.ts  parsers.test.ts  services.test.ts
tests/: test_models.py  test_territory_links.py
tests/data/: factions.json  honu-metagame.json  hossin-facility-links.json  hossin-map-info-combined.json  hossin-map_state.json  hossin-region_list.json  hosssin-facility_info.json
tests/services/: test_honu.py
(+82 files in other folders)
