[project]
name = "ps2mapstate"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi~=0.115.14",
    "httpx~=0.28.1",
    "pytest~=8.4.0",
    "uv==0.7.15",
    "uvicorn==0.34.3",
]

[dependency-groups]
dev = [
    "ruff>=0.12.1",
    "pre-commit>=3.5.0",
]
